Fix blue overlay when hovering over buttons on mobile (#954)
### Prerequisites

Put an `x` into the box(es) that apply:

- [x] This pull request fixes a bug.
- [ ] This pull request adds a feature.
- [ ] This pull request introduces breaking change.

### Description

Fixed the issue where if you hover or click on one of the social media
buttons on mobile it creates an ugly blue hover thing across the entire
bar.

### Issues Resolved

#953 

### Checklist

Put an `x` into the box(es) that apply:

#### General

- [x] Describe what changes are being made
- [x] Explain why and how the changes were necessary and implemented
respectively
- [x] Reference issue with `#<ISSUE_NO>` if applicable

#### Resources

- [x] If you have changed any SCSS code, run `make release` to
regenerate all CSS files

#### Contributors

- [x] Add yourself to `CONTRIBUTORS.md` if you aren't on it already

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -23,7 +23,7 @@ body {
   }
 }
 
-iframe[src*=disqus] {
+iframe[src*="disqus"] {
   color-scheme: light;
 }
 
@@ -142,7 +142,6 @@ strong {
 }
 
 .highlight {
-
   div,
   pre {
     margin: 2rem 0 2rem;
@@ -189,6 +188,9 @@ blockquote {
   line-height: 2.2rem;
   font-weight: 400;
   font-style: italic;
+}
+* {
+  -webkit-tap-highlight-color: transparent;
 }
 
 th,
